--- a/css/styles.css
+++ b/css/styles.css
@@ -14,9 +14,9 @@
     --color-submit: #5cb8ec;
     --font-size-p: 1vw;
     --font-style:normal;
-    --spacing-sm: 2vw;
-    --spacing-md: 4vw;
-    --spacing-lg: 10vw;
+    --spacing-sm: 5vw;
+    --spacing-md: 10vw;
+    --spacing-lg: 20vw;
 }
 
 
